[tool.poetry]
name = "ansible-amazon-base"
version = "0.1.0"
description = "Ansible Amazon Base Repository"
authors = ["Artem Veremey <artem@veremey.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.8.0"
paramiko = "^2.8.0"
pytest-testinfra = "^6.4.0"
colorama = "^0.4.4"
yamllint = "^1.26.3"
codespell = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
